<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">天下无赖</string>
    
    <string name="version">V:1.00</string>

    <string name="tab_search">查询</string>
    <string name="tab_edit">登记</string>
    <string name="tab_menu">黑名单</string>
    <string name="tab_me">我</string>



    <string name="indicate_all">全部</string>
    <string name="indicate_car">车贷</string>
    <string name="indicate_house">房贷</string>
    <string name="indicate_loan">信用贷</string>
    <string name="indicate_other">其他</string>
    <string name="user_name_tv">用户名</string>
    <string name="search_hint_et">请输入借款人手机号/姓名/身份证号</string>
    <string name="search_btn">搜索</string>
    <string name="total_tv">总计0笔\n0元</string>
    <string name="violate_tv">违约0笔\n0元</string>
    <string name="reclaimed_tv">已收回0笔\n0元</string>
    <string name="reclaiming_tv">待收回0笔\n0元</string>

    <string name="add_deadbeater">添加老赖</string>
    <string name="search_hint">搜索老赖手机号/姓名/身份证号</string>
    <string name="pay_remind">需支付100元服务费</string>
    <string name="pay_btn">立即支付</string>
    <string name="report_et">输入举报内容</string>
    <string name="submit_btn">提交</string>
    <string name="query_btn">查询</string>
    <string name="name">姓名</string>
    <string name="regist_mobile_number">手机号</string>
    <string name="regist_password">密码</string>
    <string name="login_regist">注册</string>
    <string name="login_login">登录</string>
    <string name="regist_check_code_number">验证码</string>
    <string name="regist_get_check_code">获取验证码</string>
    <string name="input_et_query">输入姓名/身份证/手机号</string>
    <string name="add">添加</string>

    <string name="head_title_tv">法律案件</string>


    <string name="courtname_tv">执行法院</string>
    <string name="areaname_tv">省份</string>
    <string name="gistid_tv">执行依据文号</string>
    <string name="casecreatetime_tv">立案时间</string>
    <string name="casecode_tv">案号</string>
    <string name="gistunit_tv">做出执行依据单位</string>
    <string name="duty_tv">生效法律文书确定的义务</string>
    <string name="performance_tv">被执行人的履行情况</string>
    <string name="disrupttypename_tv">失信被执行人行为具体情况</string>
    <string name="publishdate_tv">发布时间</string>




    <string name="car_loan">车贷</string>
    <string name="house_loan">房贷</string>
    <string name="credit_loan">信用贷</string>
    <string name="other_loan">其它</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="remark">备注</string>

    <string name="loan_money">借款金额：</string>
    <string name="yuan">元</string>
    <string name="reward">悬赏</string>
    <string name="contact">联系人</string>
    <string name="mobilephone">电话</string>
    <string name="headImage">头像</string>

    <!-- choice_pay -->
    <string name="choice_pay_amount">金额(元)</string>
    <string name="choice_pay_amount_default">¥ 100.0</string>
    <string name="choice_pay_bar_name">贝付支付</string>

    <string name="confirm_recharge_name">天下无赖</string>
    <string name="confirm_recharge_commit">确认充值</string>
    <string name="titleName">天下无赖</string>

    <string name="recharge_success_order">订 单 号</string>
    <string name="recharge_success_time">成交时间</string>
    <string name="recharge_success_method">支付方式</string>
    <string name="recharge_success_status">当前状态</string>
    <string name="recharge_success_commit">完成</string>
    <string name="reposit_card">储蓄卡</string>
    <string name="signs">**** **** ****</string>
    <string name="choice_other_pay">用其他银行卡支付</string>

</resources>
