<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/linegray"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
            android:id="@+id/main_title"
            layout="@layout/title_include"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@color/white"
                  android:gravity="center_horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/space_35"
                  android:text="@string/titleName"
                  android:textSize="@dimen/textsize_16"
                  android:textColor="@color/dark" android:id="@+id/tv_recipientsdisease"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/confirm_recharge_money"
                  android:layout_marginTop="@dimen/space_16"
                  android:textSize="@dimen/textsize_24"
                  android:textColor="@color/dark"
                  android:text="￥ 100"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/linegray"
              android:layout_margin="@dimen/space_16"
              android:layout_marginTop="@dimen/space_35"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="@dimen/space_16">

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView style="@style/recharge_success_text"
                          android:text="@string/recharge_success_order"
                          android:id="@+id/tv_order_show"/>
                <TextView style="@style/recharge_success_text"
                          android:id="@+id/recharge_success_order"
                          android:layout_toRightOf="@+id/tv_order_show"
                          android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView style="@style/recharge_success_text"
                          android:id="@+id/tv_time_show"
                          android:text="@string/recharge_success_time"/>
                <TextView style="@style/recharge_success_text"
                          android:id="@+id/recharge_success_time"
                          android:layout_toRightOf="@+id/tv_time_show"
                          android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView style="@style/recharge_success_text"
                          android:id="@+id/tv_time_method"
                          android:text="@string/recharge_success_method"/>
                <TextView style="@style/recharge_success_text"
                          android:id="@+id/recharge_success_method"
                          android:layout_toRightOf="@+id/tv_time_method"
                          android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView style="@style/recharge_success_text"
                          android:id="@+id/tv_time_status"

                          android:text="@string/recharge_success_status"/>
                <TextView style="@style/recharge_success_text"
                          android:id="@+id/recharge_success_status"
                          android:layout_toRightOf="@+id/tv_time_status"
                          android:layout_alignParentRight="true"/>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/recharge_success_commit"
            android:layout_margin="@dimen/space_16"
            android:text="@string/recharge_success_commit"
            android:textSize="@dimen/textsize_16"
            android:background="@drawable/btn_selector"/>
</LinearLayout>