<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/gray_bg"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/img_logo"
               android:layout_above="@+id/et_input" android:background="@color/transparent"
               android:src="@drawable/logo" android:layout_centerHorizontal="true"
               android:layout_margin="@dimen/space_30"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/et_input"
              android:layout_above="@+id/btn_pay_money"
              android:background="@drawable/input_box_orange"
              android:textColor="@color/black"
              android:hint="@string/input_et_query"
              android:textColorHint="@color/gray_text_search"
              android:textSize="@dimen/textsize_22" android:layout_margin="@dimen/space_14" android:ellipsize="end"
              android:singleLine="true"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pay_money"
            android:gravity="center_vertical|center_horizontal" android:background="@drawable/btn_selector" android:text="@string/query_btn"
            android:textSize="@dimen/textsize_28" android:textColor="@color/white"
            android:layout_centerVertical="true" android:layout_margin="@dimen/space_14"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
              android:gravity="center" android:id="@+id/tv_servison"
              android:layout_marginBottom="@dimen/space_10"
            android:text="@string/version"/>
</RelativeLayout>

