<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/gray_bg"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <include layout="@layout/title_include"></include>

    <include layout="@layout/item_three_new"></include>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/space_60"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@color/white">

        <TextView android:layout_width="match_parent" android:background="@color/gray_bg"
                  android:layout_alignParentTop="true"
                  android:layout_height="@dimen/space_1"/>
        <TextView android:layout_width="wrap_content"
                  style="@style/join_blacklist_tv"
                  android:text="@string/reward"
                  android:id="@+id/tv_reward"
                  android:layout_height="wrap_content" android:layout_centerVertical="true"
                  android:textColor="@color/gray_text_deep"/>
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_reward_money"
                  android:textColor="@color/gray_text"
                  android:background="@drawable/register_input_box"
                  android:layout_height="wrap_content" android:layout_centerVertical="true"
                  android:layout_toRightOf="@+id/tv_reward" android:layout_toLeftOf="@+id/tv_yuan"
                  android:inputType="number"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_alignParentRight="true"
                  android:text="@string/yuan"
                  android:id="@+id/tv_yuan"
                  style="@style/join_blacklist_tv"
                  android:textColor="@color/gray_text_deep"
                  android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:layout_width="match_parent" android:background="@color/gray_bg"
                  android:layout_alignParentBottom="true"
                  android:layout_height="@dimen/space_1"/>
    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/space_60"
                    android:background="@color/white">
        <TextView android:layout_width="wrap_content"
                  style="@style/join_blacklist_tv"
                  android:text="@string/contact"
                  android:id="@+id/tv_contact"
                  android:layout_height="wrap_content" android:layout_centerVertical="true"
                  android:textColor="@color/gray_text_deep"/>
        <EditText android:layout_width="match_parent"
                  style="@style/join_blacklist_tv"
                  android:id="@+id/et_contact"
                  android:textColor="@color/gray_text"
                  android:background="@drawable/register_input_box"
                  android:layout_alignParentRight="true"
                  android:layout_height="wrap_content" android:layout_centerVertical="true"
                  android:layout_toRightOf="@+id/tv_contact" android:inputType="text"/>
        <TextView android:layout_width="match_parent" android:background="@color/gray_bg"
                  android:layout_alignParentBottom="true"
                  android:layout_height="@dimen/space_1"/>
    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/space_60"
                    android:background="@color/white">
        <TextView android:layout_width="wrap_content"
                  android:text="@string/mobilephone"
                  android:id="@+id/tv_mobilephone"
                  style="@style/join_blacklist_tv"
                  android:textColor="@color/gray_text_deep"
                  android:layout_height="wrap_content" android:layout_centerVertical="true"
                  />
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_mobilephone"
                  style="@style/join_blacklist_tv"
                  android:textColor="@color/gray_text"
                  android:background="@drawable/register_input_box"
                  android:layout_alignParentRight="true"
                  android:layout_height="wrap_content" android:layout_centerVertical="true"
                  android:layout_toRightOf="@+id/tv_mobilephone" android:inputType="number"/>
    </RelativeLayout>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_service_money"
            android:gravity="center_horizontal"
            android:textColor="@color/gray_text"
            style="@style/join_blacklist_tv"
            android:text="@string/pay_remind"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pay_money"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/btn_selector"
            android:text="@string/pay_btn"
            android:textColor="@color/white"
            style="@style/join_blacklist_tv"
            android:padding="@dimen/space_16" android:layout_margin="@dimen/space_10"/>
</LinearLayout>

