<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/gray_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/title_include"></include>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content" android:background="@color/white">
        <TextView android:layout_width="wrap_content"
                  android:text="@string/name"
                  android:layout_height="wrap_content" android:padding="@dimen/space_14"
                  android:textSize="@dimen/textsize_18" android:textColor="@color/gray_text_deep"/>
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_username"
                  android:background="@null"
                  android:layout_height="wrap_content" android:padding="@dimen/space_14"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:background="@color/gray_bg"
              android:layout_height="@dimen/space_1"/>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content" android:background="@color/white">
        <TextView android:layout_width="wrap_content"
                  android:text="@string/regist_mobile_number"
                  android:layout_height="wrap_content" android:textSize="@dimen/textsize_18"
                  android:padding="@dimen/space_14" android:textColor="@color/gray_text_deep"/>
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_mobile_number"
                  android:background="@null"
                  android:layout_height="wrap_content" android:padding="@dimen/space_14"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:background="@color/gray_bg"
              android:layout_height="@dimen/space_1"/>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content" android:background="@color/white">
        <TextView android:layout_width="wrap_content"
                  android:text="@string/regist_password"
                  android:layout_height="wrap_content" android:textSize="@dimen/textsize_18"
                  android:padding="@dimen/space_14" android:textColor="@color/gray_text_deep"/>
        <EditText android:layout_width="match_parent"
                  android:id="@+id/et_password"
                  android:background="@null"
                  android:layout_height="wrap_content" android:padding="@dimen/space_14"/>
    </LinearLayout>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/btn_selector"
            android:text="@string/add"
            android:textSize="@dimen/textsize_18" android:textColor="@color/white"
            android:layout_margin="@dimen/space_10" android:padding="@dimen/space_16"/>

</LinearLayout>