<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    <RadioGroup android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_radiogroup"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:background="@color/gray_tab">
        <RadioButton android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/tab_bg_selector"
                     android:id="@+id/rbtn_search"
                     android:text="@string/tab_search"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textColor="@drawable/tab_font_selector"
                     android:textSize="@dimen/textsize_12"
                     android:button="@null"
                     android:paddingBottom="@dimen/space_4"
                     android:paddingTop="@dimen/space_4"
                     android:drawableTop="@drawable/tab_search_selector"
                />
        <RadioButton android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/tab_bg_selector"
                     android:id="@+id/rbtn_edit"
                     android:text="@string/tab_edit"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textColor="@drawable/tab_font_selector"
                     android:textSize="@dimen/textsize_12"
                     android:button="@null"
                     android:paddingBottom="@dimen/space_4"
                     android:paddingTop="@dimen/space_4"
                     android:drawableTop="@drawable/tab_edit_selector"/>

        <RadioButton android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/tab_bg_selector"
                     android:id="@+id/rbtn_menu"
                     android:text="@string/tab_menu"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textColor="@drawable/tab_font_selector"
                     android:textSize="@dimen/textsize_12"
                     android:button="@null"
                     android:paddingBottom="@dimen/space_4"
                     android:paddingTop="@dimen/space_4"
                     android:drawableTop="@drawable/tab_menu_selector"/>
        <RadioButton android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/tab_bg_selector"
                     android:id="@+id/rbtn_me"
                     android:text="@string/tab_me"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textColor="@drawable/tab_font_selector"
                     android:textSize="@dimen/textsize_12"
                     android:button="@null"
                     android:paddingBottom="@dimen/space_4"
                     android:paddingTop="@dimen/space_4"
                     android:drawableTop="@drawable/tab_me_selector"/>
    </RadioGroup>
</LinearLayout>